# package-publishing

./: README-ADMIN.md  README.md
.github/actions/check-typosquatters/: action.yml
.github/actions/setup-environment/: action.yml
.github/actions/verify-ownership/: action.yml
.github/workflows/: README.md  publish-cargo.yml  publish-go.yml  publish-npm.yml  publish-pypi.yml  verify-release.yml
examples/npm-package/: README.md  index.js  index.test.js  package-lock.json  package.json
examples/npm-package/.github/workflows/: publish-npm.yml
examples/pypi-package/: README.md  pyproject.toml
examples/pypi-package/.github/workflows/: publish-pypi.yml
examples/pypi-package/src/hello_world/: __init__.py
examples/pypi-package/tests/: test_hello.py
