[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nautilus-hello-world"
version = "0.1.0"
description = "A simple hello world PyPI package"
authors = [{name = "Nautilus Wraith"}]
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
